VDS 교통정보 화면 수정

--- a/base/html/common/header2.html
+++ b/base/html/common/header2.html
@@ -10,7 +10,7 @@
           <a href="#">메뉴2</a>
         </div>
       </li>
-      <li class="add">
+      <li class="facility"> <!-- 221222 클래스명 추가 -->
         <a href="#">시설물</a>
         <div class="depth2">
           <a href="#">시설물1</a>
