--- a/base/html/common/vds_left.html
+++ b/base/html/common/vds_left.html
@@ -1,46 +1,83 @@
 <h2>지점 명칭</h2>
 <div class="ly-left-list">
   <ul class="spot-info-list">
-    <li>- 노선번호 : 경부선</li>
-    <li>- CSN : </li>
-    <li>- 이정 : 123.4</li>
-    <li>- 설치방향 : 상행</li>
-    <li>- 상행 차로개수 : 3</li>
-    <li>- 하행 차로개수 : 3</li>
-    <li>- 설치년도 : 2022</li>
-    <li>- 장비제조사 : BYDA</li>
-    <li>- 버전 : 1.0</li>
+    <li>
+      <span class="name">이정</span>
+      <span class="data">123.4</span>
+    </li>
+    <li>
+      <span class="name">설치방향</span>
+      <span class="data">상행</span>
+    </li>
+    <li>
+      <span class="name">상행 차로개수</span>
+      <span class="data">3</span>
+    </li>
+    <li>
+      <span class="name">하행 차로개수</span>
+      <span class="data">3</span>
+    </li>
+    <li>
+      <span class="name">설치년도</span>
+      <span class="data">2022</span>
+    </li>
+    <li>
+      <span class="name">장비제조사</span>
+      <span class="data">BYDA</span>
+    </li>
+    <li>
+      <span class="name">버전</span>
+      <span class="data">1.0</span>
+    </li>
   </ul>
   <ul class="spot-state-list">
-    <li class="radar">
+    <li class="radar first">
       <i class="radar-power"><span class="hidden">레이더 전원</span></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
     </li>
-    <li class="radar">
+    <li class="radar last">
       <i class="radar-connect"><span class="hidden">레이더 연결</span></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
     </li>
-    <li>타 레이더 간섭 : OFF</li>
-    <li>CPU : 35%</li>
-    <li>Memory : 20%</li>
-    <li>Disk : 10%</li>
-    <li>Temperature : 25℃</li>
-    <li>Voltage : 120V</li>
-    <li class="txt-bold">- 제어기 상태 (0~9)</li>
-    <li class="radar">
+    <li>
+      <span class="name">타 레이더 간섭</span>
+      <span class="data">OFF</span>
+    </li>
+    <li>
+      <span class="name">CPU</span>
+      <span class="data">35%</span>
+    </li>
+    <li>
+      <span class="name">Memory</span>
+      <span class="data">20%</span>
+    </li>
+    <li>
+      <span class="name">Disk</span>
+      <span class="data">10%</span>
+    </li>
+    <li>
+      <span class="name">Temperature</span>
+      <span class="data">25℃</span>
+    </li>
+    <li>
+      <span class="name">Voltage</span>
+      <span class="data">120V</span>
+    </li>
+    <li class="txt-bold dot">제어기 상태 (0~9)</li>
+    <li class="radar first2">
       <i class="radar-circle green"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
     </li>
-    <li class="radar">
+    <li class="radar last2">
       <i class="radar-circle green"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
