--- a/base/html/vds_traffic.html
+++ b/base/html/vds_traffic.html
@@ -15,7 +15,7 @@
     <header class="header" include-html="/base/html/common/header2.html"></header>
     <!-- //header -->
 
-    <main class="container">
+    <main class="container vds-system-container"> <!-- 221222 클래스명 추가 -->
       <section class="monitering">
         <article class="ly-left" include-html="/base/html/common/vds_left.html"></article>
         <!-- //ly-left -->
