VDS 왼쪽 메뉴 및 교통수동정보 화면 수정

--- a/base/html/common/header2.html
+++ b/base/html/common/header2.html
@@ -3,7 +3,7 @@
     <!-- 납품시 로고는 아래 style속성의 background-image url를 수정하면 됩니다. -->
     <h1 class="logo" style="background-image:url(/base/images/logo.png);"><span class="hidden">BYDA</span></h1>
     <ul class="gnb">
-      <li class="setup">
+      <li class="equipment"> <!-- 221228 클래스명 추가 -->
         <a href="#">장비 설정</a>
         <div class="depth2">
           <a href="#">메뉴1</a>
@@ -18,7 +18,7 @@
           <a href="#">시설물3</a>
         </div>
       </li>
-      <li class="add">
+      <li class="vds"> <!-- 221228 클래스명 추가 -->
         <a href="#">VDS</a>
         <div class="depth2">
           <a href="#">메뉴1</a>
