--- a/base/html/vds_traffic_manual_info.html
+++ b/base/html/vds_traffic_manual_info.html
@@ -21,41 +21,9 @@
         <!-- //ly-left -->
 
         <article class="ly-main vds-traffic-manual-info">
-          <div class="traffic-manual-info-container">
-            <div class="manual-info tbl-border-none">
-              <table>
-                <colgroup>
-                  <col style="width:50%;" />
-                  <col style="width:50%;" />
-                </colgroup>
-                <tbody>
-                  <tr>
-                    <th>통계 시작시간</th>
-                    <td>2022-06-21 17:35:09</td>
-                  </tr>
-                  <tr>
-                    <th>통계 종료시간</th>
-                    <td>2022-06-21 17:35:09</td>
-                  </tr>
-                  <tr>
-                    <th>통계 누적시간(초)</th>
-                    <td>00:02:10</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <!-- //manual-info -->
-            <div class="manual-info btn-inline-group">
-              <button type="button" class="btn-block c-skyblue">통계 시작</button>
-              <button type="button" class="btn-block c-skyblue">통계 종료</button>
-            </div>
-            <!-- //manual-info -->
-          </div>
-          <!-- //traffic-manual-info-container -->
-
-          <div class="traffic-manual-info-container2">
+          <div class="traffic-manual-info-container-left">
             <div class="data-info-comopnent">
-              <h3>개별 차량정보</h3>
+              <h3>통과 차량정보</h3>
               <div class="unit type2" >
                 <div class="unit-content">
                   <div class="tbl-sticky">
@@ -227,6 +195,60 @@
                             <td>00395</td>
                             <td>00332</td>
                           </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
+                          <tr>
+                            <td>0002</td>
+                            <td>07/12/20</td>
+                            <td>12:02:33</td>
+                            <td>04</td>
+                            <td>08500</td>
+                            <td>00395</td>
+                            <td>00332</td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
@@ -239,6 +261,42 @@
               <!-- //unit -->
             </div>
             <!-- //data-info-comopnent -->
+          </div>
+          <!-- //traffic-manual-info-container -->
+
+          <div class="traffic-manual-info-container-right">
+            <div class="manual-info-bind">
+              <div class="manual-info tbl-border-none">
+                <table>
+                  <colgroup>
+                    <col style="width:50%;" />
+                    <col style="width:50%;" />
+                  </colgroup>
+                  <tbody>
+                    <tr>
+                      <th>통계 시작시간</th>
+                      <td>2022-06-21 17:35:09</td>
+                    </tr>
+                    <tr>
+                      <th>통계 종료시간</th>
+                      <td>2022-06-21 17:35:09</td>
+                    </tr>
+                    <tr>
+                      <th>통계 누적시간(초)</th>
+                      <td>00:02:10</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!-- //manual-info -->
+
+              <div class="manual-info btn-inline-group">
+                <button type="button" class="btn-block c-skyblue">통계 시작</button>
+                <button type="button" class="btn-block c-skyblue">통계 종료</button>
+              </div>
+              <!-- //manual-info -->
+            </div>
+            <!-- //manual-info-bind -->
 
             <div class="tbl-celled">
               <table>
@@ -327,6 +385,7 @@
                 </tbody>
               </table>
             </div>
+            <!-- //tbl-celled -->
           </div>
           <!-- //traffic-manual-info-container2 -->
         </article>
