VDS 왼쪽 메뉴 수정

--- a/base/html/common/vds_left.html
+++ b/base/html/common/vds_left.html
@@ -70,14 +70,14 @@
       <span class="data">120V</span>
     </li>
     <li class="txt-bold dot">제어기 상태 (0~9)</li>
-    <li class="radar first2">
+    <li class="radar first"> <!-- 221230 클래스명 수정 -->
       <i class="radar-circle green"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
     </li>
-    <li class="radar last2">
+    <li class="radar last"> <!-- 221230 클래스명 수정 -->
       <i class="radar-circle green"></i>
       <i class="radar-circle green"></i>
       <i class="radar-circle red"></i>
